--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ a{
 	text-decoration: none;
 	font-family: 'Oswald', sans-serif;
 }
+
+/*
+Fonts for titles - font-family: 'Oswald', sans-serif;
+Fonts for copy - font-family: 'Open Sans', sans-serif; */
 #siteContainer{
 	width: 1280px;
 	background-color: #dee6b6;
@@ -30,7 +34,7 @@ a{
 	padding-bottom: 20px;
 }
 
-#logo{
+#logo a{
 	margin-left: 20px;
 	height: 130px;
 	width: 130px;
@@ -59,6 +63,7 @@ a{
 	border-radius: 20px;
 	text-shadow: 0 2px 3px rgba(0,0,0,.1);
 	box-shadow: 0 1px 3px rgba(0,0,0.15) inset;
+	text-align: left;
 }
 
 #mainNav ul{
@@ -132,6 +137,20 @@ a{
 	margin-bottom: 20px;
 }
 
+#bottomBar{
+	width: 100%;
+	height: 20px;
+	background-color: #88a456;
+}
+
+#fishAnimation{
+	width: 270px;
+	height: 50px;
+	background-color: black;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
 /* <------------INDEX.HTML     HOME PAGE--------------------> */
 #welcome{
 	display:flex;
@@ -170,29 +189,28 @@ a{
 
 /* Start of Contact Page */
 #contactTitle{
-	width: 185px;
-	height: 45px;
-	background-color: black;
+	font-size: 55px;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
 	margin-top: 20px;
-	margin: 0 auto;
 	margin-bottom: 20px;
 }
 
 #contactTraa{
-	width: 585px;
-	height: 35px;
-	background-color: black;
-	margin-top: 20px;
+	font-size: 35px;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
 	margin: 0 auto;
+	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
 #contactText{
-	width: 400px;
-	height: 120px;
-	background-color: black;
-	margin-top: 20px;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
 	margin: 0 auto;
+	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
@@ -209,66 +227,77 @@ a{
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	margin-left: 100px;
+	border: none;
+}
+
+form input{
+border-radius: 3px;
+padding: none;
+border-style: none;
+border: 1px solid #88a456;
+font-family: 'Oswald', sans-serif;
+text-align: center;
+font-size: 14px;
 }
 
 #fName{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
+	background-color: #bcd4b9;
 	margin-bottom: 20px;
-	margin-right: 10px;
+	margin-right: 30px;
 }
 #lName{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
 }
 #address{
-	width: 330px;
+	width: 450px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
 }
 #address2{
-	width: 330px;
+	width: 450px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
 }
 
 #city{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
-	margin-right: 10px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
+	margin-right: 30px;
 }
 #province{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
 }
 
 #postalcode{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
-	margin-right: 10px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
+	margin-right: 30px;
 }
 #country{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
-	margin-bottom: 20px;
+	background-color: #bcd4b9;
+	margin-bottom: 30px;
 }
 
 #submit{
-	width: 160px;
+	width: 210px;
 	height: 40px;
-	background-color: black;
+	background-color: #bcd4b9;
 }
 
 #mapContainer{
@@ -277,7 +306,7 @@ a{
 }
 
 #mapText{
-	width: 250px;
+	width: 350px;
 	height: 100px;
 	background-color: black;
 	margin: 0 auto;
@@ -287,15 +316,15 @@ a{
 }
 
 #map{
-	width: 320px;
-	height: 250px;
+	width: 550px;
+	height: 300px;
 	background-color: black;
 	margin-top: 20px;
 	margin: 0 auto;
 }
 
 #mailWarning{
-	width: 500px;
+	width: 600px;
 	height: 25px;
 	background-color: black;
 	margin-left: auto;
@@ -333,38 +362,20 @@ a{
 
 /* End of Contact Page */
 
-/* #footer{
-	display: flex;
-	flex-direction: column;
 
-} */
 
-/* #footerNav{
-	width: 515px;
-	height: 45px;
-	background-color: black;
-	margin-top: 40px;
-	margin: 0 auto;
-	margin-bottom: 20px;
-} */
-
-#fishAnimation{
-	width: 270px;
-	height: 50px;
-	background-color: black;
-	margin: 0 auto;
-	margin-bottom: 20px;
-}
 
 /* Newsletters Page Elements*/
 
-#title{
+#title p{
 	height: 50px;
 	width: 300px;
 	color: grey;
 	font-family: 'Oswald', sans-serif;
 	margin: 0 auto;
 	margin-bottom: 20px;
+	text-align: center;
+	font-size: 30px;
 }
 
 #intro{
