--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /*css document*/
 
+
+/* Commonly used CSS styles throughout the page */
 .hidden {
 	display: none;
 }
@@ -16,9 +18,46 @@ a{
 	font-family: 'Oswald', sans-serif;
 }
 
+p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	line-height: 20px;
+	margin-left: 40px;
+	margin-right: 40px;
+}
+
+h1{
+	font-family: 'Oswald', sans-serif;
+	font-size: 36px;
+	font-weight: bold;
+}
+
+h2{
+	font-family: 'Oswald', sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+h3{
+	font-family: 'Oswald', sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+
+
 /*
 Fonts for titles - font-family: 'Oswald', sans-serif;
 Fonts for copy - font-family: 'Open Sans', sans-serif; */
+
+/* Commonly used ID's and Classes throughout the site */
 #siteContainer{
 	width: 1280px;
 	background-color: #dee6b6;
@@ -85,6 +124,14 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	border-radius: 10px;
 }
 
+#Welcome{
+	font-size: 55px;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
 #footer{
 	display: flex;
 	flex-direction: column;
@@ -137,6 +184,15 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	margin-bottom: 20px;
 }
 
+#contentBreak{
+	height: 1px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	background-color: black;
+	width: 80%;
+	margin: 0 auto;
+}
+
 #bottomBar{
 	width: 100%;
 	height: 20px;
@@ -187,6 +243,58 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	font-family: 'Oswald', sans-serif;
 }
 
+
+
+/* <-------- Start of Projects -------------> */
+#projectsIntro{
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-right: 40px;
+	margin-left: 40px;
+}
+
+#projects1{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+#salmonProj{
+	width: 600px;
+	height: 300px;
+}
+
+#projectImg1 img{
+	flex-direction: row;
+	border-radius: 10px;
+}
+
+#projects2{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-bottom: 20px;
+	border-radius: 10px;
+}
+
+#projectImg2 img{
+flex-direction: row;
+border-radius: 10px;
+}
+
+#troutProj{
+	width: 600px;
+	height: 300px;
+}
+
+#archiveProj{
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+/* <-------- END of Projects -------------> */
+
+
 /* Start of Contact Page */
 #contactTitle{
 	font-size: 55px;
@@ -219,6 +327,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	flex-direction: row;
 	justify-content: space-between;
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #form{
@@ -433,3 +542,5 @@ font-size: 14px;
 	margin-bottom: 20px;
 	margin-right: 10px
 }
+
+/* END OF Newsletters */
