--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,49 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	font-family: 'Oswald', sans-serif;
 }
 
+/* <-------------- Start of About ---------------> */
+#intro{
+	text-align: center;
+	margin-bottom: 20px;
+	margin-right: 40px;
+	margin-left: 40px;
+	border-radius: 10px;
+}
 
+#about1{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+#aboutDesc1{
+	width: 600px;
+	height: 300px;
+}
+
+#aboutImg1 img{
+	flex-direction: row;
+	border-radius: 10px;
+}
+
+#about2{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	border-radius: 10px;
+}
+
+#aboutDesc2{
+	width: 600px;
+	height: 300px;
+}
+
+#aboutImg2 img{
+	flex-direction: row;
+	border-radius: 10px;
+}
+/* <-------------- End of About ---------------> */
 
 /* <-------- Start of Projects -------------> */
 #projectsIntro{
@@ -274,7 +316,6 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	flex-direction: row;
 	justify-content: center;
 	margin-bottom: 20px;
-	border-radius: 10px;
 }
 
 #projectImg2 img{
