--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,19 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	border-radius: 10px;
 }
 
+#mainNav ul li a:hover{
+	display: block;
+	width: 100px;
+	background-color: #D8AE58;
+	box-shadow: 2px 2px black;
+	margin-left: 20px;
+	color: #fff;
+	text-align: center;
+	padding: 8px;
+	font-size: 16px;
+	border-radius: 10px;
+}
+
 #Welcome{
 	font-size: 55px;
 	font-family: 'Oswald', sans-serif;
@@ -163,6 +176,19 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	display: block;
 	width: 100px;
 	background-color: #88a456;
+	box-shadow: 2px 2px black;
+	margin-left: 20px;
+	color: #fff;
+	text-align: center;
+	padding: 8px;
+	font-size: 16px;
+	border-radius: 10px;
+}
+
+#footerNav ul li a:hover{
+	display: block;
+	width: 100px;
+	background-color: #D8AE58;
 	box-shadow: 2px 2px black;
 	margin-left: 20px;
 	color: #fff;
@@ -296,6 +322,20 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	margin-bottom: 10px;
 }
 
+#displayBox{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	width: 350px;
+	height: 500px;
+	border-radius: 10px;
+	background-color: #88a456;
+}
+
+#displayBox img{
+	margin-bottom: 20px;
+}
+
 #contentBox2{
 	display: flex;
 	flex-direction: column;
@@ -305,6 +345,29 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	border-radius: 10px;
 	background-color: #88a456;
 }
+
+#contentBox2 img{
+	margin: 0 auto;
+	width: 250px;
+	height: 150px;
+	margin-bottom: 10px;
+	border-radius: 10px;
+}
+
+#contentBox2 p{
+	font-size: 14px;
+}
+#merch img{
+	height: 200px;
+	width: 200px;
+	border-radius: 10px;
+	margin-bottom: 10px;
+}
+
+/* <-------------- End of Index.Html Home ----------> */
+
+
+
 
 /* <-------------- Start of About ---------------> */
 #intro{
@@ -380,7 +443,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	flex-direction: column;
 	justify-content: flex-start;
 	width: 350px;
-	height: 500px;
+	height: 450px;
 	border-radius: 10px;
 	background-color: #88a456;
 }
