--- a/css/main.css
+++ b/css/main.css
@@ -117,10 +117,12 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 #mainNav ul li a{
 	display: block;
 	width: 100px;
-	background-color: #88a456;
-	box-shadow: 2px 2px black;
+	background: #093028;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #88a456, #dee6b6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	box-shadow: 2px 2px 5px black;
 	margin-left: 20px;
-	color: #fff;
+	color: #000;
 	text-align: center;
 	padding: 8px;
 	font-size: 16px;
@@ -178,10 +180,14 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 #footerNav ul li a{
 	display: block;
 	width: 100px;
-	background-color: #88a456;
-	box-shadow: 2px 2px black;
+	/* background-color: #88a456; */
+	background: #093028;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #88a456, #dee6b6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	box-shadow: 2px 2px 5px black;
 	margin-left: 20px;
-	color: #fff;
+	color: #000;
 	text-align: center;
 	padding: 8px;
 	font-size: 16px;
@@ -326,7 +332,10 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	width: 350px;
 	height: 500px;
 	border-radius: 10px;
-	background-color: #88a456;
+	background: #88a456;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);
+	background: linear-gradient(to top, #88a456, #dee6b6);
+	box-shadow: 5px 5px  15px black;
 }
 
 #displayBox img{
@@ -340,7 +349,11 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	width: 350px;
 	height: 700px;
 	border-radius: 10px;
-	background-color: #88a456;
+	background: #88a456;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #88a456, #dee6b6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	box-shadow: 5px 5px  15px black;
 }
 
 #contentBox2 img{
@@ -442,14 +455,46 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	width: 350px;
 	height: 450px;
 	border-radius: 10px;
-	background-color: #88a456;
+	background: #88a456;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #88a456, #dee6b6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	box-shadow: 5px 5px  15px black;
 }
+
+
 
 #contentBox p{
 	margin-top: 20px;
 	line-height: 22px;
 }
 #contentBox img{
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	height: 100px;
+
+}
+
+#contentBoxAngling{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	width: 350px;
+	height: 450px;
+	border-radius: 10px;
+	background: #88a456;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #88a456, #dee6b6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #88a456, #dee6b6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	box-shadow: 5px 5px  15px black;
+}
+
+#contentBoxAngling p{
+	margin-top: 20px;
+	line-height: 22px;
+}
+
+#contentBoxAngling img{
+	align-self: center;
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 10px;
@@ -702,11 +747,15 @@ font-size: 14px;
 
 }
 
+
 #map{
 	width: 550px;
 	height: 300px;
 	margin-top: 20px;
 	margin: 0 auto;
+	border-radius: 10px;
+	-webkit-mask-border-radius:10px;
+	-webkit-border-radius:10px;
 }
 
 #mailWarning p{
