--- a/css/main.css
+++ b/css/main.css
@@ -224,17 +224,14 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 }
 
 
-#contentBreak{
+.contentBreak{
 	height: 1px;
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	background-color: #D8AE58;
 	width: 80%;
-
 }
-
-
 
 #bottomBar{
 	width: 100%;
@@ -324,7 +321,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	margin-bottom: 10px;
 }
 
-#displayBox{
+.displayBox{
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -337,11 +334,11 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	box-shadow: 5px 5px  15px black;
 }
 
-#displayBox img{
+.displayBox img{
 	margin-bottom: 20px;
 }
 
-#contentBox2{
+.contentBox2{
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -355,7 +352,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	box-shadow: 5px 5px  15px black;
 }
 
-#contentBox2 img{
+.contentBox2 img{
 	margin: 0 auto;
 	width: 250px;
 	height: 150px;
@@ -363,7 +360,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	border-radius: 10px;
 }
 
-#contentBox2 p{
+.contentBox2 p{
 	font-size: 14px;
 }
 #merch img{
@@ -447,7 +444,7 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	justify-content: space-between;
 }
 
-#contentBox{
+.contentBox{
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -462,11 +459,12 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 
 
 
-#contentBox p{
+.contentBox p{
 	margin-top: 20px;
 	line-height: 22px;
 }
-#contentBox img{
+
+.contentBox img{
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 10px;
@@ -529,6 +527,21 @@ Fonts for copy - font-family: 'Open Sans', sans-serif; */
 	font-family: 'Oswald', sans-serif;
 	font-size: 20px;
 	margin-top: 5px;
+}
+
+#executives{
+	display: flex;
+	flex-direction: column;
+	column-count: 2;
+	justify-content: flex-start;
+	text-align: center;
+}
+
+#executivesSplit{
+	display: flex;
+	flex-direction: row;
+	column-count: 2;
+	justify-content: flex-start;
 }
 
 #volunteers{
@@ -841,7 +854,7 @@ font-size: 14px;
 	display: flex;
 	flex-direction: column;
 	width: 400px;
-	height: 350px;
+	height: 250px;
 	margin: 0 auto;
 	margin-bottom: 20px;
 	margin-left: 10px;
@@ -870,7 +883,7 @@ font-size: 14px;
 
 #boxLeft{
 	width: 400px;
-	height: 350px;
+	height: 250px;
 	margin: 0 auto;
 	margin-right: 10px;
 	border-radius: 10px;
@@ -907,6 +920,10 @@ font-size: 14px;
 /* END OF Newsletters */
 
 
+
+
+
+
 /* Start of Links Page */
 
 a:link{
@@ -930,7 +947,7 @@ margin-top: 15px;
 margin-bottom: 20px;
 }
 
-#linkType1{
+.linkType1{
 	text-align: center;
 	background-color: #bcd4b9;
 	margin-top: 20px;
@@ -939,7 +956,7 @@ margin-bottom: 20px;
 	padding-bottom: 20px;
 }
 
-#linkType2{
+.linkType2{
 	text-align: center;
 	margin-top: 20px;
 	padding-left: 70px;
@@ -947,13 +964,13 @@ margin-bottom: 20px;
 	padding-bottom: 20px;
 }
 
-#linkTitle{
+.linkTitle{
 	font-size: 30px;
 	font-weight: normal;
 	padding-top: 20px;
 	margin-top: 20px;
 }
 
-#linkText{
+.linkText{
 	margin-bottom: 10px;
 }
