--- a/css/main.css
+++ b/css/main.css
@@ -861,6 +861,7 @@ font-size: 14px;
 }
 
 #boxRight{
+	text-align: center;
 	display: flex;
 	flex-direction: column;
 	width: 400px;
@@ -876,6 +877,7 @@ font-size: 14px;
 }
 
 #newslettersRight{
+	text-align: center;
 	margin-top: 10px;
 	column-count: 2;
 	font-size: 16px;
@@ -885,13 +887,16 @@ font-size: 14px;
 }
 
 #newslettersLeft{
+	text-align: center;
 	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 	color: black;
 	line-height: 45px;
+
 }
 
 #boxLeft{
+	text-align: center;
 	width: 400px;
 	height: 250px;
 	margin: 0 auto;
